# WDS_projekt

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TEST_GUIDE.md  package.xml
.github/: copilot-instructions.md
docker/: Dockerfile  docker-compose.yml
inc/: battery_widget.hpp  control_pad_widget.hpp  gl_rover_widget.hpp  imu_page.hpp  language_manager.hpp  lidar_sim_node.hpp  odomState.hpp  ros_node.hpp  slam_page.hpp  test_path_publisher.hpp  view_25d_widget.hpp  window.hpp
src/: battery_widget.cpp  control_pad_widget.cpp  gl_rover_widget.cpp  imu_page.cpp  language_manager.cpp  lidar_sim_node.cpp  main.cpp  path_tester.cpp  ros_node.cpp  slam_page.cpp  test_path_publisher.cpp  view_25d_widget.cpp  window.cpp  window.cpp.bak
